# pyproject.toml

[build-system]
requires      = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uncertain_linear_interpolation"
version = "0.0.0"
description = "Propagate uncertainties through piece-wise barycentric interpolation."
readme = "README.md"
authors = [{ name = "Thomas Hilder", email = "Thomas.Hilder@monash.edu" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics"
]
keywords = ["interpolation"]
dependencies = [
    "numpy",
    "scipy",
    "setuptools"
]
requires-python = ">=3.6"

[project.urls]
Homepage = "https://github.com/TomHilder/uncertain_linear_interpolation"